[package]
name = "wg-test"
version = "0.1.0"
edition = "2021"

[dependencies]
async-executor = "1.12.0"
async-io = "2.3.3"
clap = { version = "4.5.8", features = ["derive"] }
env_logger = "0.11.3"
libc = "0.2.155"
log = "0.4.22"
netlink-packet-core = "0.7.0"
netlink-packet-generic = "0.3.3"
netlink-packet-route = "0.20.1"
netlink-packet-wireguard = "0.2.3"
netlink-sys = { version = "0.8.6", features = ["async-io"] }
